[package]
name = "dac8564"
version = "0.0.4"
authors = ["Oliver Stenning <code@ostenning.com>"]
edition = "2018"
description = "A simple platform agnostic library for the Texas Instruments DAC8564"
keywords = ["embedded-hal", "driver", "dac", "8564", "dac8564"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ostenning/dac8564"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }

[features]
default = []